--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div id="title">
+      <h1>Broadway Design</h1>
+      <div id="title-links">
+        <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+          Home
+        </a>
+        <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#process">
+          Process
+        </a>
+        <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#work">
+          Work
+        </a>
+        <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#team">
+          Team
+        </a>
+        <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#contact">
+          Contact
+        </a>
+      </div>
+    </div>
+    <div id="process">
 
+    </div>
+    <div id="design">
+
+    </div>
+    <div id="copyright">
+
+    </div>
   </body>
 </html>
