process section done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>title</title>
+    <title>Broadway</title>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div id="title">
       <h1>Broadway Design</h1>
-      <div id="title-links">
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
           Home
         </a>
@@ -23,7 +22,6 @@
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#contact">
           Contact
         </a>
-      </div>
     </div>
     <div id="process">
 
