--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div id="title">
@@ -24,13 +24,49 @@
         </a>
     </div>
     <div id="process">
+      <h2>Our Process</h2>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
 
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
     </div>
     <div id="design">
+      <h3>Designed in New York</h3>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555
 
+E-mail: test@example.com
+
+Twitter: @test</p>
     </div>
     <div id="copyright">
-
+      <p>© Broadway 2017 </p>
+      <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+        Home
+      </a>
+      <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#process">
+        Process
+      </a>
+      <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#work">
+        Work
+      </a>
+      <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#team">
+        Team
+      </a>
+      <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#contact">
+        Contact
+      </a>
     </div>
   </body>
 </html>
