added css extras basic html done

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       <h1>Broadway Design</h1>
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
           Home
-        </a>
+        </a> <br /><br />
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#process">
           Process
-        </a>
+        </a> <br /><br />
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#work">
           Work
-        </a>
+        </a> <br /><br />
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#team">
           Team
-        </a>
+        </a> <br /><br />
         <a src="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#contact">
           Contact
-        </a>
+        </a> <br /><br />
     </div>
     <div id="process">
       <h2>Our Process</h2>
@@ -38,7 +38,7 @@
       <p>We put everything we have into our work.</p>
     </div>
     <div id="design">
-      <h3>Designed in New York</h3>
+      <h3 class="disigned">Designed in New York</h3>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
       <h3>Team</h3>
